[package]
name = "tc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
#libc = { version = "0.2", default-features = true }
#sonic-rs = { path = "/root/tuchuan/sonic-rs-0.3.4/" } 
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["staticlib"]
name = "tc_rust"